# A-Strategy-Engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
astrategy/: __init__.py  config.py
astrategy/api/: main.py  schemas.py  storage.py  strategy_factory.py
astrategy/charts/: __init__.py  indicators.py
astrategy/composites/: __init__.py  base.py  equal_weight.py  fixed.py  (+2 more)
docs/: STRATEGY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: evaluate_factor.py  fetch_data.py  optimize_weights.py  prime_csi300.py  run_api.py  run_ma_backtest.py  smoke_real_akshare.py
tests/: test_akshare_client_extra.py  test_akshare_client_fundamentals.py  test_api.py  test_api_portfolio.py  test_attribution.py  test_cache_schema_migration.py  test_chart_indicators.py  test_composable_strategy.py  test_composite_equal_weight.py  test_composite_fixed.py  test_composite_ic_weighted.py  test_composite_optuna_fit.py  test_conditions.py  test_constraints.py  test_costs.py  test_data_synthetic_extras.py  test_data_synthetic_new_sources.py  test_evaluation_decay.py  test_evaluation_ic.py  test_evaluation_quintile.py  test_factor_base.py  test_factor_earnings_quality.py  test_factor_momentum_skip.py  test_factor_northbound.py  test_factor_northbound_acceleration.py  test_factor_valuation_composite.py  test_holdings_derivation.py  test_indicators.py  test_metrics.py  test_pit_membership.py  test_portfolio.py  test_regime.py  test_sizing.py  test_top_n_ranker.py  test_valuation_backfill.py  test_walk_forward.py
(+88 files in other folders)
