[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astrategy"
version = "0.1.0"
description = "A-share (Chinese stock market) trading strategy research platform"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "tenacity>=8.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
include = ["astrategy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
